# WebScraperProject

./: .env.sample  .gitignore  README.md  pyproject.toml
files/output_data_collection.csv/: output_data_collection.csv
src/: config.py  main.py
src/core/: consts.py  crawler.py  parser.py  tools.py
