[tool.poetry]
name = "Sergey"
version = "0.1.0"
description = ""
authors = ["Sergey <slukanec778@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
loguru = "^0.7.2"
httpx = "^0.27.2"
beautifulsoup4 = "^4.12.3"
selectolax = "^0.3.26"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
